# tsltools

./: .TODO.swp  .gitignore  .gitlab-ci.yml  .parsed.hoa  .stylish-haskell.yaml  .travis.yml  2query.sl  CONTIRUBTING.md  CONTRIBUTING.md  CONTRIUBTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  Note.sh  Note.txt  README.md  TSL_intro_blogpost  err  foo.tslmt  genAllHoa.sh  index.js  mac_run_ltlsynt.sh  query.sl  run_ltlsynt.sh  stack.yaml  tlsfSynt.sh  tlsfSynth_cmdline.sh  tlsfSynth_stdin.sh  tsl.cabal  tslpreprocess  visualize_hoa.sh  work  ~
.github/workflows/: action.yml
doc/: CoreGeneration.md  Documentation.md  Modules.md
docs/: Rhythm.html  ThreeNotesAlt.html  ThreeNotesE.html  ThreeNotesRand.html  _config.yml  combine.sh  index.md  music.html  old.html  out.js  synth_code.js  tonejs.js  tsl_intro_blogpost.html  tsl_intro_blogpost.md  tslmt-wip.md  tslmt.md
docs/_includes/: head.html
docs/_includes/tonejs/: index.html  music.js
docs/_layout/: default.html
docs/spec_webapp/: Heating.tsl  Test  Whoa.tsl  app.py
docs/spec_webapp/templates/: base.html  create.html  index.html
docs/tonejs/: Rhythm.js  ThreeNotesE.js  ThreeNotesRand.js  index.html  music.js  music2.js  music3.js
docs/tool-docs/: tslmt2tsl-limitations.md  tslmt2tsl-wip.md  tslmt2tsl.md  tslpreprocess.md
flask_app/: app.py
flask_app/templates/: content.html
lambda/: index.js  ltlsynt  sample.txt
lambda/__MACOSX/: ._index.js  ._ltlsynt  ._tslsynth
specs/test/tslmt/: euf.tsl
src/lib/: .TSL.hs.swp  CoreGen.hs  FunctionComposite.hs  PlayTSL.hs  TSL.hs  TSLCoreGenerator.hs
src/lib/CoreGen/: CoreGen.hs  ToolCall.hs
src/lib/CoreGeneration/: CoreUtilities.hs  FindFirstConcurrent.hs  MinimalAssumptionCores.hs  UnrealizabilityCores.hs
src/lib/SSCC/: SSCC.hs
src/lib/Simulator/: CLI.hs  Core.hs  FiniteTraceChecker.hs  Simulator.hs
src/lib/TSL/: .Logic.hs.swp  Aiger.hs  Ast.hs  Binding.hs  CFM.hs  Dependency.hs  Error.hs  Eval.hs  Expression.hs  FormulaUtils.hs  Logic.hs  Parser.hs  Preprocessor.hs  Reader.hs  Simulation.hs  Simulator.hs  Specification.hs  Splitter.hs  StringMap.hs  SymbolTable.hs  TLSF.hs  TOML.hs  ToString.hs  Types.hs
src/lib/TSL/ModuloTheories/: .Sygus.hs.swp  AST.hs  Assumptions.hs  CFG.hs  CVC5.hs  Cfg.hs  ConsistencyChecking.hs  Debug.hs  PredicateList.hs  Predicates.hs  Solver.hs  Sygus.hs  Theories.hs
src/lib/TSL/ModuloTheories/Parser/: Preprocessor.hs
src/lib/TSL/ModuloTheories/Parsers/: Preprocessor.hs
src/lib/TSL/ModuloTheories/Sygus/: .Recursion.hs.swp  @  Assumption.hs  Common.hs  Parser.hs  Query.hs  Recursion.hs  Update.hs  ~
src/lib/TSL/ModuloTheories/Theories/: Base.hs  EUf.hs  Lia.hs  Uf.hs
src/lib/TSL/Parser/: Data.hs  Expression.hs  Global.hs  Utils.hs
src/lib/TSL/Reader/: Abstraction.hs  Bindings.hs  Data.hs  InferType.hs  Sugar.hs
src/lib/TSL/Simulation/: AigerSimulator.hs  Core.hs  EnvironmentSimulationBackend.hs  EnvironmentSimulationInterface.hs  FiniteTraceChecker.hs  InterfacePrintingUtils.hs  SystemSimulationBackend.hs  SystemSimulationBackend.tsl  SystemSimulationInterface.hs
src/lib/TSL/Simulator/: Core.hs  FiniteTraceChecker.hs
src/lib/TSL/Writer/: Applicative.hs  Arrow.hs  Clash.hs  JavaScript.hs  Monadic.hs  RxKotlin.hs  WebAudio.hs
src/lib/TSL/Writer/CFM/: Applicative.hs  Arrow.hs  Clash.hs  JavaScript.hs  Monadic.hs  WebAudio.hs
src/lib/TSL/Writer/HOA/: Codegen.hs  Imp.hs  JavaScript.hs  Python.hs  Utils.hs  XState.hs
src/test/: DependencyTests.hs  JSWriterTests.hs  ModuloTheoriesTests.hs  PreprocessorTests.hs  SplitTests.hs  Test.hs
src/test/regression/ModuloTheories/: cav19.tslmt  euf-transitive.tslmt  euf.tslmt  eventually_sygus.tslmt  functions_and_preds.tslmt  next_sygus.tslmt
src/test/regression/ModuloTheories/inputs/: preprocess3.tslmt  preprocess4.tslmt  preprocess6.tslmt
src/test/regression/Preprocess/0/: expected.tsl  input.tsl
src/test/regression/Preprocess/1/: expected.tsl  input.tsl
src/test/regression/Preprocess/2/: expected.tsl  input.tsl
src/test/regression/Preprocess/3/: expected.tsl  input.tsl
src/test/res/: DepTestReference.txt  LTL2TGBATest.hoa
src/test/res/hoa/: Ball.tsl.hoa  Caching.tsl.hoa  Coffee.tsl.hoa  Heating.tsl.hoa  Lights.tsl.hoa  Lights2.tsl.hoa  Lights3.tsl.hoa  Morning2.tsl.hoa  Note.hoa  Note2.tsl.hoa  Note4.tsl.hoa  NoteButton.tsl.hoa  Rhythm.tsl.hoa  Shades.hoa  Shades2.tsl.hoa  Simple.tsl.hoa  ThreeNotesE.tsl.hoa  ThreeNotesRand.tsl.hoa  Window.tsl.hoa  highArity.tsl.hoa  nestedFxns.tsl.hoa
src/test/res/specs/: Alarm.tsl  Ball.tsl  Caching.tsl  Coffee.tsl  Heating.tsl  Lights.tsl  Lights2.tsl  Lights3.tsl  Morning.tsl  Morning2.tsl  Note.tsl  Note2.tsl  Note3.tsl  Note4.tsl  NoteButton.tsl  Rhythm.tsl  Shades.tsl  Shades2.tsl  Simple.tsl  ThreeNotesE.tsl  ThreeNotesRand.tsl  Window.tsl  Window2.tsl  highArity.tsl  nestedFxns.tsl
src/tool-utilities/: ArgParseUtils.hs  EncodingUtils.hs  FileUtils.hs  PrintUtils.hs  Utils.hs
src/tools/cfm2code/: Config.hs  Main.hs
src/tools/cfmcheck/: Main.hs
src/tools/cfminfo/: Main.hs
src/tools/cfmsym/: Main.hs
src/tools/coregen/: Main.hs
src/tools/cstratsim/: Main.hs
src/tools/hoa2code/: Config.hs  Main.hs
src/tools/parsehoa/: Main.hs
src/tools/tsl2tlsf/: Main.hs
src/tools/tsl2toml/: Main.hs
src/tools/tslcheck/: Main.hs
src/tools/tslcoregen/: Main.hs
src/tools/tslinline/: Main.hs
src/tools/tslminrealizable/: Main.hs
src/tools/tslmt2tsl/: Config.hs  Main.hs
src/tools/tslplay/: Main.hs
src/tools/tslpreprocess/: Config.hs  Main.hs
src/tools/tslresolve/: Main.hs
src/tools/tslsize/: Main.hs
src/tools/tslsplit/: Config.hs  Main.hs
src/tools/tslsym/: Config.hs  Main.hs
src/tools/tslsynth/: Config.hs  Main.hs
test/: test_01.tsl  test_01A.tsl  test_01B.tsl  test_02.tsl  test_02A.tsl  test_02B.tsl  test_02C.tsl  test_03.tsl  test_03A.tsl  test_04.tsl  test_04A.tsl  test_04B.tsl  test_04C.tsl  test_05.tsl  test_05A.tsl  test_06.tsl  test_06A.tsl  test_07.tsl  test_07A.tsl  test_08.tsl  test_08A.tsl  test_09.tsl  test_09A.tsl  test_09B.tsl  test_10.tsl  test_10B.tsl
(+14 files in other folders)
