name:                tsl
version:             1.2.3.0
synopsis:            Library and tools for the TSL specification format
description:         Library and tools for the TSL specification format
license:             OtherLicense
license-file:        LICENSE
author:              Felix Klein <Klein@ProjectJARVIS.de>
                     Mark Santolucito <mark.santolucito@yale.edu>
                     Philippe Heim <>
maintainer:          Klein@ProjectJARVIS.de
category:            Synthesis
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://gitlab.projectjarvis.de/tools/tsltools

library

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , parsec >=3.1 && <3.2
    , array >=0.5 && <0.6
    , mtl >=2.2 && <2.3
    , containers >=0.5 && <0.7
    , QuickCheck
    , process >= 1.6.3.0
    , ansi-terminal >= 0.6

  exposed-modules:
    TSL

  other-modules:
    TSL.Binding
    TSL.Error
    TSL.Expression
    TSL.Specification
    TSL.StringMap
    TSL.SymbolTable
    TSL.Types
    TSL.Parser
    TSL.Parser.Data
    TSL.Parser.Expression
    TSL.Parser.Global
    TSL.Parser.Utils
    TSL.Reader
    TSL.Reader.Abstraction
    TSL.Reader.Bindings
    TSL.Reader.Data
    TSL.Reader.InferType
    TSL.Reader.Sugar
    TSL.Splitter
    TSL.Writer.Clash
    TSL.Writer.Applicative
    TSL.Writer.Arrow
    TSL.Writer.Monadic
    TSL.Aiger
    TSL.Logic
    TSL.Eval
    TSL.TLSF
    TSL.CFM
    TSL.Simulation
    TSL.Simulation.AigerSimulator
    TSL.Simulation.FiniteTraceChecker
    TSL.Simulation.SystemSimulationBackend
    TSL.Simulation.SystemSimulationInterface
    TSL.Simulation.EnvironmentSimulationBackend
    TSL.Simulation.EnvironmentSimulationInterface
    TSL.Simulation.InterfacePrintingUtils

  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010

executable tslinline

  main-is:
    Main.hs

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslinline

  default-language:
    Haskell2010


executable tsl2tlsf

  main-is:
    Main.hs

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tsl2tlsf

  default-language:
    Haskell2010

executable tslsplit

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslsplit

  default-language:
    Haskell2010

executable tslsym

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    Config

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslsym

  default-language:
    Haskell2010

executable tslcheck

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslcheck

  default-language:
    Haskell2010

executable tslsize

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6
    , filepath >= 1.4

  hs-source-dirs:
    src/tools/tslsize

  default-language:
    Haskell2010

executable cfmcheck

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfmcheck

  default-language:
    Haskell2010

executable cfminfo

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6
    , filepath >= 1.4

  hs-source-dirs:
    src/tools/cfminfo

  default-language:
    Haskell2010

executable cfmsym

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfmsym

  default-language:
    Haskell2010

executable cfm2code

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    Config

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , filepath >= 1.4
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfm2code

  default-language:
    Haskell2010

executable tslplay

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , filepath >= 1.4
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslplay

  default-language:
    Haskell2010

test-suite default

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  type:
    detailed-0.9

  test-module:
    Test

  other-modules:
    SplitTests

  hs-source-dirs:
    src/test

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , QuickCheck
    , Cabal >=2.4

  default-language:
    Haskell2010
