name:                tsl
version:             1.2.3.0
synopsis:            Library and tools for the TSL specification format
description:         Library and tools for the TSL specification format
license:             OtherLicense
license-file:        LICENSE
author:              Felix Klein <felix.klein@cispa.de>
                     Mark Santolucito <mark.santolucito@yale.edu>
                     Philippe Heim <philippe.heim@cispa.de>
                     Gideon Geier <gideon.geier@cispa.de>
maintainer:          TODO
category:            Synthesis
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://gitlab.projectjarvis.de/tools/tsltools


library

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , parsec >=3.1 && <3.2
    , array >=0.5 && <0.6
    , mtl >=2.2 && <2.3
    , containers >=0.5 && <0.7
    , QuickCheck
    , process >= 1.6.3.0
    , ansi-terminal >= 0.6

  exposed-modules:
    TSL
    TSLCoreGenerator

  other-modules:
    TSL.Binding
    TSL.Error
    TSL.Expression
    TSL.Specification
    TSL.StringMap
    TSL.SymbolTable
    TSL.Types
    TSL.Parser
    TSL.Parser.Data
    TSL.Parser.Expression
    TSL.Parser.Global
    TSL.Parser.Utils
    TSL.Reader
    TSL.Reader.Abstraction
    TSL.Reader.Bindings
    TSL.Reader.Data
    TSL.Reader.InferType
    TSL.Reader.Sugar
    TSL.Splitter
    TSL.Writer.Clash
    TSL.Writer.Applicative
    TSL.Writer.Arrow
    TSL.Writer.Monadic
    TSL.Aiger
    TSL.Logic
    TSL.Eval
    TSL.TLSF
    TSL.TOML
    TSL.CFM
    TSL.Simulation
    TSL.Simulation.AigerSimulator
    TSL.Simulation.FiniteTraceChecker
    TSL.Simulation.SystemSimulationBackend
    TSL.Simulation.SystemSimulationInterface
    TSL.Simulation.EnvironmentSimulationBackend
    TSL.Simulation.EnvironmentSimulationInterface
    TSL.Simulation.InterfacePrintingUtils
    CoreGeneration.CoreUtilities
    CoreGeneration.UnrealizabilityCores
    CoreGeneration.MinimalAssumptionCores
    CoreGeneration.FindFirstConcurrent
    

  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010



executable tslcoregen

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -threaded

  build-depends:
      tsl
    , base >= 4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , ansi-terminal >= 0.6
    , process 
    , optparse-applicative

  main-is:
    Main.hs

  other-modules:
    Utils
    PrintUtils
    EncodingUtils
    FileUtils

  default-language:
    Haskell2010

  hs-source-dirs:
    src/tools/tslcoregen
    src/tool-utilities


executable tslminrealizable

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -threaded

  build-depends:
      tsl
    , base >= 4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , ansi-terminal >= 0.6
    , process 
    , optparse-applicative

  main-is:
    Main.hs

  other-modules:
    Utils
    PrintUtils
    EncodingUtils
    FileUtils

  default-language:
    Haskell2010

  hs-source-dirs:
    src/tools/tslminrealizable
    src/tool-utilities


executable tslresolve

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts
    -Wall -Wno-name-shadowing

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslresolve
    src/tool-utilities

  default-language:
    Haskell2010


executable tsl2tlsf

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tsl2tlsf
    src/tool-utilities

  default-language:
    Haskell2010


executable tsl2toml

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  ghc-options:
    -Wall -Wno-name-shadowing

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tsl2toml
    src/tool-utilities

  default-language:
    Haskell2010


executable tslsplit

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , filepath >= 1.4
    , containers >=0.5 && <0.7
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslsplit
    src/tool-utilities

  default-language:
    Haskell2010


executable tslsym

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils
    Config

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslsym
    src/tool-utilities

  default-language:
    Haskell2010


executable tslcheck

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslcheck
    src/tool-utilities

  default-language:
    Haskell2010


executable tslsize

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6
    , filepath >= 1.4

  hs-source-dirs:
    src/tools/tslsize
    src/tool-utilities

  default-language:
    Haskell2010


executable cfmcheck

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfmcheck
    src/tool-utilities

  default-language:
    Haskell2010


executable cfminfo

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6
    , filepath >= 1.4

  hs-source-dirs:
    src/tools/cfminfo
    src/tool-utilities

  default-language:
    Haskell2010


executable cfmsym

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfmsym
    src/tool-utilities

  default-language:
    Haskell2010


executable cfm2code

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    FileUtils
    EncodingUtils
    Config

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , filepath >= 1.4
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/cfm2code
    src/tool-utilities

  default-language:
    Haskell2010


executable tslplay

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  main-is:
    Main.hs

  other-modules:
    PrintUtils
    EncodingUtils

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , filepath >= 1.4
    , directory >= 1.3
    , ansi-terminal >= 0.6

  hs-source-dirs:
    src/tools/tslplay
    src/tool-utilities

  default-language:
    Haskell2010

test-suite default

  ghc-options:
    -Wall
    -Wno-name-shadowing
    -fno-ignore-asserts

  type:
    detailed-0.9

  test-module:
    Test

  other-modules:
    SplitTests

  hs-source-dirs:
    src/test

  build-depends:
      tsl
    , base >=4.7 && <4.13
    , QuickCheck
    , Cabal >=2.4

  default-language:
    Haskell2010
